remove flexbox, fix spacing, add anchors, toying with nav fade

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,7 @@ h1 {
   font-weight: bold;
   margin-bottom: 20px;
   color: #0f0f0f;
-  letter-spacing: 6px;
-  opacity: 1;
+  letter-spacing: 6px;  
 }
 
 h3 {
@@ -43,6 +42,33 @@ p {
   background: rgba(204, 204, 204, 0.55);
 }
 
+nav {
+  height: 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  text-align: right;
+  height: 30px;
+  transition: height 3s;
+}
+
+nav li {
+  letter-spacing: 1px;
+  display: inline-block;
+  margin: 10px;
+}
+
+nav li a {
+  /*font-size: 18px;*/
+  color: black;
+  transition: height 3s;
+}
+
+#nav-kerri{
+  float: left;
+  display: none;
+}
+
 #arrow {
   text-align: center;
 }
@@ -67,24 +93,33 @@ i {
   font-style: italic;
 }
 
-#main {
+/*#main {
   display: flex;
-  align-items: flex-start;
   flex-direction: column;
-}
+  align-items: center;
+  justify-content: center;
+}*/
 
-.details {
+.details-container {
+  display: table;
   margin: auto;
 }
 
-#profile {
-  width: 50vw;
-  margin-top: 30px;
+.details-inner {
+  display: table-cell;
+  vertical-align: middle; 
 }
 
-#work, #skills {
+#work, #profile {
+  margin-top: 50px;
+  height: 100vh;
   width: 50vw;
-  margin-top: 30px;
+}
+
+ #skills {
+  width: 50vw;
+  margin-top: 45px;
+  margin-bottom: 45px;
 }
 
 #work h3 {
@@ -92,6 +127,7 @@ i {
 }
 
 a {
+  font-weight: bold;
   text-decoration: none;
   color: #141334;
 }
@@ -110,6 +146,7 @@ li a {
 }
 
 #contact {
+  height: 100vh;
   margin-bottom: 15px; 
   text-align: center;
 }
